# SkyrimSE-FPInertia

./: CMakeLists.txt  CMakePresets.json  FPInertia.ini  README.md  vcpkg-configuration.json  vcpkg.json
src/: Inertia.cpp  Inertia.h  InertiaPresets.cpp  InertiaPresets.h  Menu.cpp  Menu.h  PCH.h  SKSEMenuFramework.h  Settings.cpp  Settings.h  main.cpp
